--- a/index.Rmd
+++ b/index.Rmd
@@ -755,36 +755,22 @@ deletion diagnostics), 민감도 분석을 통한 확인도 적절할 수 있다
 사용된 진단용 그래프와 검사의 신뢰도가 포함되어야 하고 해석과 적용을 돕기 위해,
 결과에 대하여 철저하게 기술되어야 하며 최종 집단 모형 및 주요 중간 단계에서 얻어진
 중요한 결과물이 포함되어야 한다.
+
 (6) 논의
 모형 구축과 단순화 과정의 근거, 결과의 해석, 계획서 위반, 그래프에 대한 설명과 논의
 사항을 보고서에 이해하기 쉬운 문장으로 기술하여야 한다. 예로서, 체중에 따른 용량
 조절, 크레아티닌 청소율과 약물의 청소율 간의 관계, 특수 환자 집단에 미치는 영향
 등을 비롯하여 모형 개발로 예상할 수 있는 효과에 대해 언급하여야 한다.
-(7) 결과의 적용
-허가 사항에 정보 추가, 특수집단에서의 약물 용량 조절이나 안전성 정보 추가, 추가적인
 
-연구 등과 같이 분석 결과의 사용에 대한 논의를 기술하여야 한다. 또한 통계적 유의
-성과 임상적 유의성 간의 관계에 대해 논의되어야 한다. 집단 약동학 분석 결과 특정
-약동학 또는 약력학 파라미터에 통계적으로 유의한 차이가 관찰된다고 하더라도 이것은
-임상적으로 어떠한 의미가 있는지는 검토되어야 한다. 임상약리학자 등의 전문가와 추
-가적으로 검토할 필요가 있다.
-추가적으로, 용량 조절에 대해 집단 약동학 모형을 적용하여 잠재적으로 가능한 반응에
-대해 시뮬레이션한 결과를 그래프로 도식화하는 것을 권장한다.
-많은 경우 의사결정이 유의확률(p-value)과 같은 확률(probability)에 기반하여 이루어지나,
-정확한 확률을 구할 수 없는 경우도 있으며, 우도(likelihood) 또는 우도비(likelihood
-ratio)에 기반한 의사 결정이 필요하거나 더 유용한 경우들이 흔히 있다. 또한 유의확률
-이나 가설 검정(hypothesis test)보다는 파라미터 추정(parameter estimation)이 더 유용
-한 경우가 많다.
-집단 약동학 분석 결과를 검토할 때는 각 약동학/약력학 파라미터의 점 추정치가 통계
-적으로 유의한 차이가 있는지 여부보다는 그 차이의 크기(차이 또는 비에 대한 점 추
-정치)가 어느 정도인지, 각 집단의 변이의 크기(분산의 정도)가 어느 정도인지, 어느 한
-집단의 변이 정도가 다른 집단의 변이에 포함되는지, 좀 더 효과나 독성에 가까운 지표
-(AUC, C max 등)들을 시뮬레이션했을 때 그 분포구간이 유사한지 등을 함께 검토하여야
-한다.
+(7) 결과의 적용
+
+허가 사항에 정보 추가, 특수집단에서의 약물 용량 조절이나 안전성 정보 추가, 추가적인 연구 등과 같이 분석 결과의 사용에 대한 논의를 기술하여야 한다. 또한 통계적 유의성과 임상적 유의성 간의 관계에 대해 논의되어야 한다. 집단 약동학 분석 결과 특정 약동학 또는 약력학 파라미터에 통계적으로 유의한 차이가 관찰된다고 하더라도 이것은 임상적으로 어떠한 의미가 있는지는 검토되어야 한다. 임상약리학자 등의 전문가와 추가적으로 검토할 필요가 있다. 추가적으로, 용량 조절에 대해 집단 약동학 모형을 적용하여 잠재적으로 가능한 반응에 대해 시뮬레이션한 결과를 그래프로 도식화하는 것을 권장한다. 많은 경우 의사결정이 유의확률(p-value)과 같은 확률(probability)에 기반하여 이루어지나, 정확한 확률을 구할 수 없는 경우도 있으며, 우도(likelihood) 또는 우도비(likelihood ratio)에 기반한 의사 결정이 필요하거나 더 유용한 경우들이 흔히 있다. 또한 유의확률이나 가설 검정(hypothesis test)보다는 파라미터 추정(parameter estimation)이 더 유용한 경우가 많다.
+집단 약동학 분석 결과를 검토할 때는 각 약동학/약력학 파라미터의 점 추정치가 통계적으로 유의한 차이가 있는지 여부보다는 그 차이의 크기(차이 또는 비에 대한 점 추정치)가 어느 정도인지, 각 집단의 변이의 크기(분산의 정도)가 어느 정도인지, 어느 한 집단의 변이 정도가 다른 집단의 변이에 포함되는지, 좀 더 효과나 독성에 가까운 지표 (AUC, C~max~ 등)들을 시뮬레이션했을 때 그 분포구간이 유사한지 등을 함께 검토하여야 한다.
 시뮬레이션을 할 때에는 공변량 간이나 약동학/약력학 파라미터들 간에 독립을 가정할
 수 없으므로 상관관계나 공분산을 고려하여야 한다. 또한 임상시험 간의 변이, 매 투약
 간의 변이, 추정값의 불확실성도 가능하면 고려하는 것이 좋다.
 약물에 대하여 알려져 있는 정보에 따라 요구되는 자료의 수준은 달라질 수 있다.
+
 (8) 부록
 부록은 집단 분석에 사용된 자료 세트에서 대표적인 부분을 포함하여야 한다. 중요하
 다고 간주되는 추가적인 그래프뿐만 아니라, 최종 모형 결과의 인쇄물과 함께 프로그
@@ -792,48 +778,4 @@ ratio)에 기반한 의사 결정이 필요하거나 더 유용한 경우들이 
 적인 집단 약동학 연구로 수행되었는지에 상관없이 부록에는 연구 계획서가 포함되어야
 한다.
 
-# (APPENDIX) 별첨 {-}
-
-# 참고문헌 {#references}
-
-1. US FDA. Guidance for Industry - Population Pharmacokinetics, Feb. 1999.
-2. European Medicines Agency, Guideline on Reporting the Results of Population
-Pharmacokinetic Analysis. Jun. 2007.
-3. Beal SL, Sheiner LB. Estimating Population Pharmacokinetics. CRC Critical Rev
-Biomed Eng 1982;8:195-222.
-4. Bonate PL. Pharmacokinetic-Pharmacodynamic Modeling and Simulation. 2e.
-Springer. 2011.
-5. Ette EI, Williams PJ. Pharmacometrics: The Science of Quantitative Pharmacology.
-John Wiley & Sons Inc. 2007.
-6. Gabrielsson J, Weiner D. Pharmacokinetic & Pharmacodynamic Data Analysis:
-Concepts and Applications. 4e. Swedish Pharmaceutical Press. 2000.
-7. Sheiner LB. Learning vs Confirming in Clinical Drug Development, Clin
-Pharmacol Ther 1997; 61:275-291.
-8. Karlsson MO. Diagnosing Model Diagnostics. Clinical Pharmacology &
-Therapeutics. 2007; 82:17-20.
-9. Kevin Dykstra. Reporting guidelines for population pharmacokinetic analyses. J
-Pharmacokinet Pharmacodyn. 2015; 42:301-314.
-
-# 제·개정 이력 {#versions}
-
-연번 제·개정번호 승인일자 주요내용
-1 B1-2015-2-011 2015.09. 제정
-
-# 정보 {#info}
-
-의약품 개발 시 집단 약동학 활용을 위한 가이드라인
-발 행 일
-발 행 인
-편집위원장
-편 집 위 원
-도움주신 분
-발 행 처
-2015 월 09월
-손 여 원
-이 선 희
-(의약품심사부 종양약품과)
-한의식, 김소희, 윤경은, 엄정윤, 박소라, 김동환, 전설희, 김미지
-식품의약품안전평가원 순환계약품과, 소화계약품과,
-집단 약동학 가이드라인 실무작업반
-식품의약품안전평가원 의약품심사부 종양약품과
 
