update: broken link / mobi file

--- a/Rmd/99-appendix.Rmd
+++ b/Rmd/99-appendix.Rmd
@@ -28,17 +28,11 @@ Pharmacokinet Pharmacodyn. 2015; 42:301-314.
 # 정보 {#info}
 
 의약품 개발 시 집단 약동학 활용을 위한 가이드라인
-발 행 일
-발 행 인
-편집위원장
-편 집 위 원
-도움주신 분
-발 행 처
-2015 월 09월
-손 여 원
-이 선 희
-(의약품심사부 종양약품과)
-한의식, 김소희, 윤경은, 엄정윤, 박소라, 김동환, 전설희, 김미지
-식품의약품안전평가원 순환계약품과, 소화계약품과,
-집단 약동학 가이드라인 실무작업반
-식품의약품안전평가원 의약품심사부 종양약품과
+
+- 발 행 일: 2015 월 09월  
+- 발 행 인:손 여 원  
+- 편집위원장: 이 선 희  
+- 편 집 위 원: (의약품심사부 종양약품과) 한의식, 김소희, 윤경은, 엄정윤, 박소라, 김동환, 전설희, 김미지  
+- 도움주신 분: 식품의약품안전평가원 순환계약품과, 소화계약품과, 집단 약동학 가이드라인 실무작업반  
+- 발 행 처: 식품의약품안전평가원 의약품심사부 종양약품과  
+
