--- a/index.Rmd
+++ b/index.Rmd
@@ -19,9 +19,9 @@ output:
         before: |
           <li><a href="./index.html">의약품 개발 시 집단 약동학 활용을 위한 가이드라인</a></li>
         after: |
-          <li><a href="https://github.com/asancpt" target="blank">github.com/asancpt</a></li>
+          <li><a href="https://github.com/pipetcpt/book-poppk" target="blank">github.com/pipetcpt/book-poppk</a></li>
       #download: [pdf, epub, mobi]
-      edit: https://github.com/asancpt/book-poppk/edit/master/inst/examples/%s
+      edit: https://github.com/pipetcpt/book-poppk/edit/master/inst/examples/%s
       sharing:
         github: yes
         facebook: yes
@@ -31,7 +31,7 @@ output:
 
 # 서문 {-}
 
-[<img src="assets/cover.jpg" style="max-width:40%;min-width:40px;float:right;" alt="원본" />](http://www.nifds.go.kr/nifds/08_part/part03_c_b.jsp?mode=view&article_no=7038&pager.offset=0&board_no=167)
+[<img src="assets/cover.jpg" style="max-width:40%;min-width:40px;float:right;" alt="원본" />](https://www.nifds.go.kr/brd/m_15/view.do?seq=7038)
 
 ```{block2, note-text, type='rmdwarning'}
 이 가이드라인은 집단 약동학에 대한 식품의약품안전처의 입장을 기술한 것으로, 대외적으로 법적 효력을 가지는 것이 아님
